src/objects/QQNNeuron__c.object
<CustomObject>
    <description>One Neuron in one Layer of one Neural Network</description>
    <fields>
        <fullName>LayerId__c</fullName>
        <label>LayerId</label>
        <referenceTo>QQNLayer__c</referenceTo>
        <relationshipName>Neuron</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>NeuronId__c</fullName>
        <label>NeuronId</label>
        <precision>8</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WeightCount__c</fullName>
        <label>WeightCount</label>
        <precision>8</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weights__c</fullName>
        <label>Weights</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>QQNNeuron</label>
    <nameField>
        <displayFormat>AINNLN-{0000000000}</displayFormat>
        <label>Neuron Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>